quick fixes for search screen on mobile

--- a/application/tutor-app/src/components/searchResults/searchResults.scss
+++ b/application/tutor-app/src/components/searchResults/searchResults.scss
@@ -45,6 +45,11 @@
 
 .search-total {
     color: white;
+    @media screen and (max-width: 855px) {
+        margin-bottom: 30px;
+        margin-right: 10px;
+        margin-left: 10px;
+      }
 }
 
 .message-box {
@@ -121,6 +126,10 @@
     width: 100%;
     height: 40px;
     margin-top: 25px;
+    @media screen and (max-width: 855px) {
+        margin-bottom: 30px;
+        margin-left: 10px;
+      }
 }
 
 .sort-box {
@@ -131,6 +140,17 @@
 
 .sort-by-title {
     margin-right: 10px;
+    @media screen and (max-width: 855px) {
+        margin-bottom: 30px;
+        margin-left: 10px;
+        margin-top: 0px;
+      }
+}
+
+.sort-by{
+    @media screen and (max-width: 855px) {
+        height: 43px;
+      }
 }
 
 .sort-arrows {
@@ -139,6 +159,12 @@
     justify-content: center;
     margin-left: 15px;
     
+}
+
+#apply-sort-btn{
+    @media screen and (max-width: 855px) {
+        height: 45px;
+      }
 }
 
 #sort-direction-btn{
@@ -164,6 +190,9 @@
 
 .sort-by-title>h3 {
     margin: 0;
+    @media screen and (max-width: 855px) {
+        margin-top: -15px;
+      }
 }
 
 .sort-icon.selected {
